fix: prevent game name text from being hidden under play button on mobile

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -195,7 +195,7 @@ div.video_area::-webkit-scrollbar {
   position: relative;
   top: 0;
   left: 5%;
-  width: 45%;
+  width: 42%;
   height: 93%;
   display: flex;
   flex-direction: column;
@@ -250,6 +250,7 @@ div.video_area::-webkit-scrollbar {
   font-size: 2dvh;
   border-radius: 5dvh;
   cursor: pointer;
+  pointer-events: all;
 }
 
 .external_link_container {
@@ -435,6 +436,7 @@ div.video_area::-webkit-scrollbar {
       height: 14dvh;
       width: 97dvw;
       left: 1.5dvw;
+      pointer-events: none;
     }
 
     .game_info_thumb {
